LOK-2188: Add first observation time to calculate reachability (#1552)
* LOK-2148: Add availability percentage query

* LOK-2148: address review comment

* LOK-2148: Handle review comment

* LOK-2149: Add TopN nodes API

* LOK-2149: Update avg response time

* LOK-2188: Add first observation time and monitored service status api

* LOK-2188: keep default ascending order

* LOK-2188: Handle review comments